enhance: post article

--- a/temanasn-fe/package.json
+++ b/temanasn-fe/package.json
@@ -13,12 +13,15 @@
     "@ckeditor/ckeditor5-build-classic": "^41.4.1",
     "@ckeditor/ckeditor5-react": "^6.3.0",
     "@isaul32/ckeditor5-math": "^41.3.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tabler/icons-react": "^2.45.0",
     "axios": "^1.6.8",
     "ckeditor4-react": "^4.2.0",
     "format-currency": "^1.0.0",
     "framer-motion": "^10.18.0",
     "moment": "^2.30.1",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
@@ -26,6 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-jwt": "^1.2.0",
     "react-number-format": "^5.3.1",
+    "react-player": "^2.16.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1",
     "react-router-prompt": "^0.6.1",
