--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "scripts": {
-    "dev": "concurrently \"cd temanasn-fe && yarn dev\"  \"cd backend && yarn dev\""
+    "dev": "concurrently \"cd frontend && yarn dev\"  \"cd backend && yarn dev\""
   }
 }
